Fixed template alignment issue and added part of inidcator

--- a/genomeportal/resources/less/styles.less
+++ b/genomeportal/resources/less/styles.less
@@ -163,3 +163,13 @@ tr.highlight {
         float: right;
     }
 }
+
+.highlight-related {
+    font-weight: bold;
+    font-size: 0.8em;
+    background: #D5EDFC;
+    padding: 0.25em 0.5em;
+    display: inline-block;
+    float: right;
+}
+
